--- a/style.css
+++ b/style.css
@@ -1,11 +1,159 @@
-*
-{
+* {
+    text-decoration: none;
     margin: 0;
     padding: 0;
-    text-decoration: none;
+    color: white;
 }
 
-body
+body {
+    font-family: 'Open Sans', sans-serif;
+    background-color: #636e72;
+}
+
+.baner {
+    font-size: 30px;
+    margin: 10px;
+    padding-top: 30px;
+    ;
+}
+
+.main {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: [first]0.5fr 2fr 0.5fr [last];
+    height: 90vh;
+    width: 90vw;
+    margin: 0 auto;
+}
+
+.secend {
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    overflow: hidden;
+    border-bottom: 2px solid #2d3436;
+}
+
+footer {
+    margin: 0 auto;
+    height: calc(10vh - 60px);
+    width: 90vw;
+    text-align: center;
+    padding-top: 30px;
+    background-color: #636e72;
+}
+
+.asi {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-color: #e66767;
+    margin: 10px;
+}
+.asi:hover{background-color: #d55656;}
+
+.asi1 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-color: #e15f41;
+    margin: 10px;
+}
+.asi1:hover{background-color: #d04e30;}
+
+.asi2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    background-color: #e66767;
+    margin: 10px;
+}
+.asi2:hover{background-color: #d55656;}
+    
+.asi3 {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    background-color: #778beb;
+    margin: 10px;
+}
+.asi3:hover{background-color: #667ada;}
+
+.asi4 {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    background-color: #74b9ff;
+    margin: 10px;
+}
+    
+::-webkit-scrollbar {
+    display: none;
+}
+
+.big {
+    grid-column: 3/4;
+    grid-row: 1/4;
+    background-color: #636e72;
+    overflow-y: scroll;
+    max-height: 549px;
+    margin: 10px;
+    
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4,1fr);
+}
+
+
+#ink {
+    height: 100%;
+    width: 100%;
+}
+
+.parentMedia {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: 1fr;
+}
+
+.wspolny
 {
-    background-color: #37a;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+}
+
+.media {
+    background-color: azure;
+    margin: 10px;
+    max-width: 250px;
+    border-radius: 5%;
+    cursor: pointer;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 117px;
+}
+
+.m1 {
+    background-color: #4267b2;
+    font-size: 50px;
+}
+
+.m2
+{
+    font-size: 60px;
+    
+    background-color: #000;
+}
+
+.m3
+{
+    background-color: #006400;
+    font-size: 70px;
+}
+
+.m4
+{
+    font-size: 60px;
+    background-color: #24292e;
+}
+
+.mini
+{
+    
 }
